gapi race condition fix

--- a/public/src/css/style.less
+++ b/public/src/css/style.less
@@ -480,9 +480,8 @@ body, h1 {
         }
 
         &.small {
-            font-size: 15px;
-            line-height: 14
-            px;
+            font-size: 16px;
+            line-height: 15px;
             font-weight: 300;
         }
     }
